appdata: Add vcs-browser URL
This link useful for the application centers like GNOME Software.

More information: https://www.freedesktop.org/software/appstream/docs/chap-Metadata.html#tag-url

--- a/data/org.gustavoperedo.FontDownloader.appdata.xml.in
+++ b/data/org.gustavoperedo.FontDownloader.appdata.xml.in
@@ -226,6 +226,7 @@
     <release version="1.0.0" date="2020-09-16"/>
   </releases>
   <url type="homepage">https://github.com/GustavoPeredo/font-downloader</url>
+  <url type="vcs-browser">https://github.com/GustavoPeredo/font-downloader</url>
   <url type="bugtracker">https://github.com/GustavoPeredo/Font-Downloader/issues</url>
   <url type="translate">https://poeditor.com/join/project?hash=hfnXv8Iw4o</url>
   <developer_name>Gustavo Peredo</developer_name>
